# longest-word

./: main.py  pyproject.toml  requirements.txt  wsgi.py
longest_word/: game.py  notebook.ipynb
static/: style.css
templates/: check.html
tests/: test_game.py
